# StarBoost

./: .dockerignore  .env.example  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  README.zh.md  pyproject.toml
docker/: codex-boost.Dockerfile
docs/: cli_workflow.md  docker_and_auth.md  overview.md  package_format.md  quickstart.md  review_guidelines.md
docs/zh/: cli_workflow.md  docker_and_auth.md  overview.md  package_format.md  quickstart.md  review_guidelines.md
examples/biostats_csv_task/original_task/: prompt.md  rubrics.json  task.json
examples/biostats_csv_task/original_task/materials/: trial_measurements.csv
examples/checkpoint_resume_task/: starboost.json
examples/checkpoint_resume_task/original_task/: rubrics.json  task.json
examples/checkpoint_resume_task/original_task/materials/: policy_excerpts.md  scenario.md
examples/chinese_notice_task/original_task/: prompt.md  rubrics.json  task.json
examples/chinese_notice_task/original_task/materials/: service_notes.md
examples/code_cli_task/original_task/: prompt.md  rubrics.json  task.json
examples/code_cli_task/original_task/materials/: conversion_rules.md
examples/legal_risk_memo_task/original_task/: prompt.md  task.json
examples/simple_memo_task/original_task/: prompt.md  rubrics.json  task.json
src/starboost/: __init__.py  cli.py  config.py  context.py  executor.py  exporter.py  review.py  service.py  state.py  task_package.py  trace.py  ui.py  util.py
tests/: test_cli_current.py  test_full_loop_fake_codex.py  test_review.py  test_state.py  test_task_package.py  test_ui.py
(+19 files in other folders)
