[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starboost"
version = "0.1.0"
description = "Expert-boosting workflow for Codex-style task execution."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Stardust AI" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
starboost = "starboost.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
